# atlas

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  WEBSOCKET_FIX_SUMMARY.md  atlas.ps1  atlas.sh  atlas_kg.tool.json  output.txt  pyproject.toml  requirements.txt  test_hybrid_memory.py  test_memory_viz.py  test_scrolling.py  test_test_mode.py  test_websocket.py
atlas-desktop/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
atlas-desktop/src-tauri/: Cargo.toml  tauri.conf.json
atlas-desktop/src-tauri/src/: main.rs  system_metrics.rs
docs/: API_DOCUMENTATION.md  CONTEXTUAL_CHUNKING.md  MEMORY_ENHANCEMENT.md  MIGRATION_GUIDE.md  NOTES.md  PROJECT_TRACKER.md  ROADMAP.md  TEMPORAL_DECAY_SESSION_MEMORY.md  TESTING_STRATEGY.md  context_optimization.md  executive_summary.md  memory_implementation_spec.md  memory_research.md  migration-todo.md  policies.yaml  router.md  tauri_setup.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
kg/: archiver.py  archiver_policy.md  kgClient.ts  kg_client.py  package-lock.json  package.json  retriever.py  retriever_policy.md  tsconfig.json
scripts/: install-ollama.ps1  install_ollama.sh  kg_backfill.py  pull-models.ps1  pull_models.sh  run.ps1  run.sh  setup.ps1  setup.sh  visualize_summarizer.py
tests/: test_agent_configuration.py  test_agent_tool_loop.py  test_cli_memory.py  test_enhanced_memory.py  test_hybrid_memory_eviction.py  test_instant_commands.py  test_kv_context.py  test_memory.py  test_tools.py  (+4 more)
(+98 files in other folders)
