[package]
name = "atlas-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["dialog-all", "shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = []
